# rustipe

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.diesel  Procfile  README.md  Rocket.toml  diesel.toml  docker-compose.yml
.ebextensions/: db-instance-options.config  instance.config
.github/workflows/: rust.yml
infra/: readme.md
infra/ansible/: .gitignore  requirements.yml  site.yml
infra/docker-compose/: docker-compose.yml  readme.md
infra/docker-compose/config/: .env.local
infra/helm/: readme.md
infra/helm/rustipe/: Chart.yaml  values.yaml
infra/helm/rustipe/templates/: config.yaml  deployment.yaml
infra/terraform/: main.tf  output.tf  variables.tf
infra/terraform/templates/: hosts.tpl
migrations/2020-06-29-093619_create_receipes/: down.sql  up.sql
migrations/2020-07-08-151127_add_recipe_field/: down.sql  up.sql
migrations/2020-08-10-160707_add_timestamp_field/: down.sql  up.sql
src/: dao.rs  domain.rs  graphql_schema.rs  infrastructure.rs  lib.rs  models.rs  schema.rs
src/domain/: users.rs
src/domain/recipes/: errors.rs  ports.rs
src/domain/recipes/interactors/: recipe.rs
src/domain/recipes/models/: recipe.rs
src/domain/recipes/ports/: dao.rs  image_store.rs  parser.rs
src/domain/users/: errors.rs
src/domain/users/interactors/: user.rs
src/infrastructure/: sql.rs  web.rs
src/infrastructure/parser/: html.rs
src/infrastructure/s3/: image_store.rs
src/infrastructure/sql/: models.rs  schema.rs
src/infrastructure/web/: graphql_schema.rs  jwt.rs  security.rs  server.rs
tests/: basics.rs  recipe.rs  user.rs
(+8 files in other folders)
