[package]
name = "recipes_backend"
version = "0.1.0"
authors = ["Thibaut Gery <thibaut.gery@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.4", features = ["postgres", "r2d2"] }
itertools = "0.8"
dotenv = "0.15.0"
juniper = "0.14.2"
juniper_rocket = "0.5.2"
rocket = "0.4.2"
uuid = { version = "0.8", features = ["serde", "v4"] }
rocket_cors = "0.5.1"
serde_json = "1.0"
select = "0.5.0"
reqwest = { version = "0.10", features = ["blocking", "json"] }
thiserror = "1.0.20"
iso8601-duration = "0.1.0"
ring = "0.16.15"
jsonwebtoken = "7"
serde = {version = "1.0", features = ["derive"] }

[dev-dependencies.cargo-husky]
version = "1"
default-features = false # Disable features which are enabled by default
features = ["precommit-hook",  "run-cargo-fmt", "run-cargo-clippy"]
